<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_list_item"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal"
    android:weightSum="1.0" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/contactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/contactNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/black" />

    <ImageView
        android:id="@+id/contactDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:clickable="true"
        android:contentDescription="@string/discard_row"
        android:src="@drawable/ic_action_discard" />
    
</LinearLayout>