<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_list_item"
    android:padding="8dp"
    android:layout_marginBottom="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp"
        android:weightSum="1.0" >

        <Spinner
            android:id="@+id/action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:entries="@array/ring_choices_array"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <View
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="2dp"
            android:background="@android:color/black" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:src="@drawable/ic_action_discard"
            android:clickable="true"
            android:contentDescription="@string/discard_row" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/start"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_weight="0.5"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:background="@drawable/toggle_switch"
            android:padding="5dp"
            android:layout_marginRight="1dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/end"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/end"
            android:textColor="@android:color/white"
            android:background="@drawable/toggle_switch"
            android:padding="5dp"
            android:layout_marginLeft="1dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="7dp"
        android:background="@android:color/black" />

</LinearLayout>